2010-11-09  Jeff Segars <jeff@webempoweredchurch.org>

	* Fixed bug #16262: Link browser shows wrong title for pages and tt_content elements (Thanks to Reinhard Führicht)

2010-11-09  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #16280: Field size for "shortcut" is 3, although maxitems is 1
	* Fixed bug #16279: Use class constants for pages:shortcut_mode in tbl_pages.php

2010-11-09  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #15184: Generation transparent images with GMENU fails (Thanks to Mathias Schreiber)
	* Fixed bug #16302: Template module crashes, if no template exists on a page (Thanks to Reinhard Führicht and Andreas Kiessling)

2010-11-09  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #16298: Set focus to password field when "loginRefreshLayer" shows up (Thanks to Andreas Kiessling)

2010-11-08  Jeff Segars  <jeff@webempoweredchurch.org>

	* Added feature #16133: Introduce new config setting to completely disable the preview notification box (Thanks to Andreas Kiessling)
	* Fixed bug #14901: Forgotten styling: User Name at the top misses a CSS definition (Thanks to Christopher Stelmaszyk)

2010-11-08  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #16245: htmlArea RTE: When inserting link with IE8, trailing line break is also linked
	* Updated htmlArea RTE version to 2.1.3
	* Fixed bug #16313: htmlArea RTE: WebKit does not support copy and cut commands anymore

2010-11-07  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #16246: Create class constants for pages.doktype
	* Fixed bug #16252: Apply "bookmarks" naming to UserTS options
	* Follow-up to #16136: Added unit-tests for t3lib_basicFileFunctions (Thanks to Andreas Kiessling)

2010-11-07  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #16293: htmlArea RTE: Add quick tips to insert emoticon dialogue

2010-11-06  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #16281: htmlArea RTE: Add context sensitive help to remove format dialogue (BE only)